@@ -6,6 +6,8 @@
   If the container experiences an error, the function will throw an exception
  .Parameter containerName
   Name of the container for which you want to wait
+ .Parameter timeout
+  Specify the number of seconds to wait for activity. Default is 1800 (30 min.). -1 means wait forever.
  .Example
   Wait-NavContainerReady -containerName navserver
 #>
@@ -19,6 +21,9 @@ function Wait-NavContainerReady {
     )
 
     Process {
+        $startLog = ""
+        $logs = docker logs $containerName
+        if ($logs) { $startlog = [string]::Join("`r`n",$logs) }
         $prevLog = ""
         Write-Host "Waiting for container $containerName to be ready"
         $cnt = $timeout
@@ -26,7 +31,7 @@ function Wait-NavContainerReady {
         do {
             Start-Sleep -Seconds 1
             $logs = docker logs $containerName
-            if ($logs) { $log = [string]::Join("`r`n",$logs) }
+            if ($logs) { $log = ([string]::Join("`r`n",$logs)).substring($startLog.Length) }
             $newLog = $log.subString($prevLog.Length)
             $prevLog = $log
             if ($newLog -ne "") {
