@@ -26,7 +26,7 @@ function Import-DeltasToNavContainer {
         [switch]$compile
     )
 
-    $sqlCredential = Get-DefaultSqlCredential -containerName $containerName -sqlCredential $sqlCredential
+    $sqlCredential = Get-DefaultSqlCredential -containerName $containerName -sqlCredential $sqlCredential -doNotAskForCredential
     $containerDeltaFolder = Get-NavContainerPath -containerName $containerName -path $deltaFolder
     if ("$containerDeltaFolder" -eq "") {
         throw "The deltaFolder ($deltaFolder) is not shared with the container."
