@@ -1,3 +1,9 @@
+vnext
+Added tenant parameter to Export-NavContainerDatabasesAsBacpac
+Object handling functions will not ask for credentials if not specified
+BugFix: doNotOpen in Get-NavContainerEventLog was string - should be switch
+Compile-AppInNavContainer had a dependency on the WebClient, this dependency is removed
+
 0.2.8.4
 Bugfix: Invoke-NavContainerCodeunit didn't work with multitenancy
 Bugfix: Premium user didn't work with multitenancy
